[gd_scene load_steps=14 format=2]

[ext_resource path="res://Slime.tscn" type="PackedScene" id=1]
[ext_resource path="res://age_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://pastels.png" type="Texture" id=4]
[ext_resource path="res://slime beaker.png" type="Texture" id=5]
[ext_resource path="res://indicator.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48.3002, 27.3959 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5956, 6.62357 )

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Spill"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Invisible"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 56.9008, 8.52963 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Slime" parent="." instance=ExtResource( 1 )]
position = Vector2( 425, 301 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Age: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( 736.225, 510.913 )
scale = Vector2( 2.97559, 2.22644 )
z_index = -1
texture = ExtResource( 4 )
vframes = 3
hframes = 3
frame = 2

[node name="Label2" type="Label" parent="."]
margin_left = 935.0
margin_top = 1.0
margin_right = 1020.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 977.103, 37.3755 )
shape = SubResource( 1 )

[node name="Label3" type="Label" parent="."]
margin_top = 43.0
margin_right = 111.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Coins: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 1.0
margin_top = 533.0
margin_right = 249.0
margin_bottom = 650.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Harvest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 79.4097, 568.7 )
scale = Vector2( -8.78149, -3.39445 )
shape = SubResource( 2 )

[node name="Beaker" type="Sprite" parent="."]
visible = false
position = Vector2( 76.415, 465.415 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )
vframes = 2
hframes = 2

[node name="Goo" type="Sprite" parent="."]
visible = false
position = Vector2( 76.415, 466 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )
vframes = 2
hframes = 2
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Goo"]
autoplay = "Idle"
anims/Idle = SubResource( 3 )
anims/Spill = SubResource( 4 )

[node name="Indicator" type="Sprite" parent="."]
visible = false
position = Vector2( 76.415, 409.7 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Indicator"]
autoplay = "Invisible"
anims/Blink = SubResource( 5 )
anims/Invisible = SubResource( 6 )

[node name="Label5" type="Label" parent="."]
visible = false
margin_left = 175.828
margin_top = 533.0
margin_right = 252.828
margin_bottom = 590.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Finish"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 233.94, 568.177 )
scale = Vector2( 1.13082, 2.85151 )
shape = SubResource( 7 )

[node name="FailedHarvest" type="Timer" parent="."]
one_shot = true
[connection signal="tree_exiting" from="." to="." method="_on_Main_tree_exiting"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="input_event" from="Area2D3" to="." method="_on_Area2D3_input_event"]
[connection signal="timeout" from="FailedHarvest" to="." method="_on_FailedHarvest_timeout"]
